app/frontend/assets/styles/components/_incident-details.scss
.taak-detail {
    max-width: map-get($container-max-widths, md);
    margin: 0 auto;

    .link:not(.link--phone):not(.link--email) {
        svg {
            width: 24px;
            height: 24px;
            vertical-align: middle;
            margin-left: 10px;
            path {
                fill: $green-tint01;
            }
        }
    }
    .link:not(.link--navigate) {
        svg {
            margin-left: 0;
        }
    }

    span .btn-inline {
        svg {
            path {
                fill: $green-tint01;
            }
        }
    }
}
.container__details {
    &--sticky-bottom {
        min-height: 150px;

        .sticky {
            .form-row {
                gap: 10px;
            }
        }
    }

    .locatie-container {
        flex: 1 1 auto;
        margin-top: 2rem;

        .list-clean:not(.has-padding) {
            margin-top: 0;
        }

        input[type="checkbox"] {
            @include form-check-input();
            vertical-align: top;
            margin-bottom: 1em;
        }
    }

    .container__uitklapper {
        position: relative;
        z-index: 2000;
        display: inline;
        vertical-align: middle;

        > span {
            margin-left: $input-padding-y;
            svg {
                path {
                    fill: $green-tint01;
                }
            }
        }

        .legenda {
            position: absolute;
            top: 20px;
            left: -45px;
            background-color: $white;
            width: auto;
            white-space: nowrap;
            padding: $input-padding-x;
            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
            display: none;

            ul {
                margin: 0;
            }

            li:not(:last-child) {
                margin-bottom: $input-padding-y;
            }
        }

        .legenda-item {
            display: inline-block;
            width: 24px;
            height: 24px;
            background-color: #78b4ff;
            margin-right: $input-padding-y;
            vertical-align: bottom;

            &.openbaar {
                background-color: #00ad00;
            }
            &.ret {
                background-color: #ffff64;
            }
            &.kunst {
                background-color: #d700b0;
            }
            &.begraafplaats {
                background-color: #ffaeff;
            }
            &.aquisitie {
                background-color: #3c3cff;
            }
            &.vastgoed {
                background-color: #d36000;
            }
        }

        &:hover {
            .legenda {
                display: block;
            }
        }
    }
}
.container__details.taak {
    > *:first-child {
        margin-top: 0;
    }
    h1 {
        margin-top: 0;
    }
    h2 {
        margin-bottom: 0;
        font-weight: 400;
        font-size: 1.25em;
    }
    h3 {
        margin-bottom: 0;
    }
    p {
        margin-top: 0;
        line-height: 175%;
    }

    > *:last-child {
        margin-bottom: 0;
    }

    > details {
        > summary {
            padding-left: 0;
            border-top: none;
            border-bottom: 1px solid $gray-tint04;

            &::before {
                left: auto;
                right: 16px;
                transform: rotate(90deg) scale(1.5);
            }

            h2 {
                margin-top: 0;
                svg {
                    margin-right: 0.5rem;
                    vertical-align: text-top;
                }
            }
        }

        &[open] {
            > summary {
                &::before {
                    left: auto;
                    right: 12px;
                    transform: rotate(-90deg) scale(1.5);
                }
            }
        }

        .container__flex {
            display: flex;
            gap: 20px;
            justify-content: space-between;
            flex-wrap: wrap;

            > div {
                flex: 1;
            }
        }
    }
}

.no-image {
    background-color: $gray-tint02;
    height: 70px;
    background-repeat: no-repeat;
    background-position: center;
    background-size: 60px auto;
    margin: 0 $container-padding-x;
}

.container__imageslider {
    overflow-x: scroll;
    scroll-snap-type: x mandatory;
    scroll-behavior: smooth;
    width: 100%;
    -webkit-overflow-scrolling: touch;

    .imageslider {
        display: flex;
        left: 0;
        margin-top: 0;
    }

    .container__image {
        max-height: calc(250px + 10vw);
        width: 100%;
        background-color: $gray-tint02;
        scroll-snap-align: start;
        scroll-snap-stop: always;
        cursor: zoom-in;
        position: relative;

        img {
            width: 100%;
            height: 100%;
            height: 100%;
            display: block;
            margin: auto;
            object-fit: contain;
        }
    }
}

.container__image {
    .tag--in-image {
        display: inline-block;
        position: absolute;
        right: 1.4rem;
        bottom: 0.667rem;
        font-size: 0.625rem;
        padding: 6px 10px;
        background-color: $blue-100;
        width: auto;
        border-radius: 4px;

        .sublabel {
            display: none;
        }
    }

    .modal-body & {
        .tag--in-image {
            right: 0;
            bottom: -2.2rem;
            padding-right: 0;
            text-align: right;
            .sublabel {
                display: block;
                color: $gray-600;
            }
        }
    }
}

.container__thumbs {
    padding: 16px $container-padding-x 0;
    white-space: nowrap;
    overflow-x: scroll;
    position: relative;
    height: 98px;

    ul {
        list-style: none;
        padding: 0;
        margin: 0 -8px;
        position: absolute;
        left: 2px;
        transition: left 0.5s;

        li {
            display: inline-block;
            margin: 0 8px;
            cursor: pointer;

            &.selected {
                .container__image {
                    opacity: 1;
                    outline: 2px solid $primary;
                }
            }
        }
    }

    .container__image {
        height: calc(50px + 2vw);
        width: calc(66px + 2vw);
        background-color: $gray-tint02;
        opacity: 0.5;
        outline: none;

        img {
            max-width: 100%;
            height: 100%;
            display: block;
            margin: auto;
        }
    }
}

.incident-meta-list {
    li {
        margin-bottom: 1rem;
        > *:last-child {
            margin-bottom: 0;
        }
    }
}

.section--seperated {
    .full-width {
        margin: 0 (-(map-get($container-margin, md)));
    }

    &.section--imageslider {
        position: relative;
        > svg {
            padding: 4px;
            background-color: #fff;
            position: absolute;
            top: 30px;
            right: 0;
            pointer-events: none;
        }
    }
}

.section--location {
    margin-bottom: 50px;
}

.incident__header {
    display: flex;
    justify-content: space-between;

    .icon {
        display: inline-block;
    }
}

.container__header-taaknavigatie {
    > h1 {
        position: relative;
        padding-right: 185px;
        min-height: 1em;
    }
    span,
    p {
        &.lighter {
            color: $gray-tint08;
        }
    }
    > .container__flex {
        display: flex;
        justify-content: space-between;

        > div {
            flex: 1 1 auto;
        }
    }
}

.container__taaknavigatie {
    position: absolute;
    right: 0;
    top: 0;
    height: 48px;

    span {
        display: none;
        color: $gray-tint08;
        padding-right: 16px;
        transform: translateY(-10px);

        @media (min-width: map-get($grid-breakpoints, sm)) {
            display: inline-block;
        }
    }
}

.list__task-navigation {
    display: inline;
    @include list-clean();
    margin: 0;
    flex: 1;

    li {
        display: inline;

        &:first-of-type {
            margin-right: 5px;
        }

        a {
            display: inline-block;
            width: 48px;
            height: 48px;
            border: 1px solid $gray-tint08;
            background-color: transparent;
            position: relative;

            svg {
                position: absolute;
                top: calc(50% - 12px);
                left: 12px;
                width: 24px;
                height: 24px;
                path {
                    fill: $gray-tint11;
                }
            }

            &.previous {
                svg {
                    transform: rotate(180deg);
                }
            }

            &.disabled {
                cursor: default;
                text-decoration: none;
                background-color: $gray-tint04;
                border-color: $gray-tint04;

                svg {
                    path {
                        fill: $gray-tint07;
                    }
                }
            }
        }
    }
}

.taak-detail--preview {
    section {
        padding: 1rem 0;
        .container__details.taak {
            padding: 0 26px;
        }
        h2 {
            border-bottom: 1px solid $gray-tint04;
            padding-bottom: 1rem;
        }
    }

    .link--phone {
        svg {
            top: 0;
        }
    }
}

.link--whatsapp {
    vertical-align: middle;
    display: inline-block;
    margin-left: 12px;
    margin-right: -5px;
    padding: 5px;
    .icon--whatsapp {
        width: 26px;
        height: 26px;
    }
}

.details--melder {
    > div {
        padding-bottom: 1em;
        border-bottom: 1px solid $gray-tint04;
    }
    p {
        margin-bottom: 0;

        &:first-of-type {
            margin-top: 1em;
        }

        small {
            color: $magenta-tint01;
            font-weight: 700;
        }
    }
    .link--phone {
        line-height: 2rem;

        svg {
            position: absolute;
            top: 6px;
            left: -23px;
        }
    }
    .link--email {
        svg {
            position: absolute;
            top: 8px;
            left: -25px;
            margin-right: 6px;
        }
    }
}

